<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context="org.example.appointmentmanager_15330190.MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:paddingStart="30dp"
        android:textAllCaps="true"
        android:textSize="24sp"
        android:text="@string/appointment_manager" />

    <CalendarView
        android:id="@+id/calendar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="20dp"
        android:foregroundGravity="center" />

    <TableLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:paddingStart="90dp"
        app:layout_constraintTop_toBottomOf="@+id/calendar">
        <TableRow>
            <Button
                android:id="@+id/createAppointmentBtn"
                android:background="@drawable/button_rounded"
                android:textSize="12sp"
                android:textColor="@color/text"
                android:text="@string/create"
                tools:ignore="ButtonStyle">

            </Button>
            <Button
                android:id="@+id/viewEditAppointmentBtn"
                android:background="@drawable/button_rounded"
                android:textSize="12sp"
                android:textColor="@color/text"
                android:text="@string/view_edit">

            </Button>
        </TableRow>
        <TableRow>
            <Button
                android:id="@+id/deleteAppointmentBtn"
                android:background="@drawable/button_rounded"
                android:textSize="12sp"
                android:textColor="@color/text"
                android:text="@string/delete">

            </Button>

            <Button
                android:id="@+id/moveAppointmentBtn"
                android:background="@drawable/button_rounded"
                android:textSize="12sp"
                android:textColor="@color/text"
                android:text="@string/move_menu">

            </Button>

        </TableRow>
        <Button
            android:id="@+id/searchBtn"
            android:background="@drawable/button_rounded"
            android:textSize="12sp"
            android:textColor="@color/text"
            android:text="@string/search">

        </Button>

    </TableLayout>

</android.support.constraint.ConstraintLayout>
