<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/background"
    tools:context="org.example.appointmentmanager_15330190.DeleteAppointment">

    <TextView
        android:id="@+id/txtVDeletePageHeading"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:shadowDx="5"
        android:shadowDy="5"
        android:shadowRadius="1"
        android:text="@string/delete_appointments"
        android:textAlignment="center"
        android:textSize="24sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:orientation="horizontal"
        android:paddingLeft="20dp"
        android:paddingRight="20dp">

        <EditText
            android:id="@+id/delPageAppointmentNumberInput"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/enter_appointment_number_here"
            android:inputType="number"
            android:nextFocusDown="@+id/delPageAppointmentNumberInput"
            android:nextFocusUp="@+id/delPageAppointmentNumberInput" />

        <Button
            android:id="@+id/deleteBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="deleteSelectedAppointment"
            android:text="@string/deleteOne" />

        <Button
            android:id="@+id/deleteAllBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="deleteAllAppointments"
            android:text="@string/deleteAll" />

    </LinearLayout>


    <ListView
        android:id="@+id/listOfAppointments"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />


</LinearLayout>

