<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/background"
    tools:context="org.example.appointmentmanager_15330190.ViewAppointment">

    <TextView
        android:id="@+id/txtVViewPageHeading"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/view_appointments"
        android:textAlignment="center"
        android:textSize="24sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:orientation="horizontal"
        android:paddingLeft="20dp"
        android:paddingRight="20dp">

        <EditText
            android:id="@+id/viewPageAppointmentNumberInput"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/enter_appointment_number_here"
            android:inputType="number"
            android:nextFocusDown="@+id/viewPageAppointmentNumberInput"
            android:nextFocusUp="@+id/viewPageAppointmentNumberInput" />

        <Button
            android:id="@+id/editBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="editAppointment"
            android:text="@string/edit" />

    </LinearLayout>


    <ListView
        android:id="@+id/listOfAppointments"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />


</LinearLayout>

