<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/background"
    tools:context="org.example.appointmentmanager_15330190.SearchAppointmentList">

    <TextView
        android:id="@+id/txtVSearchPageHeading"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="@string/search_an_appointment"
        android:textAlignment="center"
        android:textSize="24sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:orientation="horizontal"
        android:paddingLeft="20dp"
        android:paddingRight="20dp">

        <EditText
            android:id="@+id/searchPageAppointmentWordInputInput"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/enter_text_here"
            android:inputType="text"
            android:nextFocusDown="@+id/searchPageAppointmentWordInputInput"
            android:nextFocusUp="@+id/searchPageAppointmentWordInputInput" />

        <Button
            android:id="@+id/searchBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/search" />


    </LinearLayout>


    <ListView
        android:id="@+id/searchPageListOfAppointments"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />


</LinearLayout>

